servises structuer and animation

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <h2>
                         Osama Youssef <br />
                         <span>
-                            DevOps Engineer <br />
+                            DevOps Engineer 
                             | AWS | Docker | 
                             <a href="#iam">...</a>
                         </span>
@@ -247,43 +247,46 @@
             </div>
 
             <div class="serv-cont">
+<!-- DevOps Engineer  -->
                 <div class="serv-box">
-                    <i class="fas fa-desktop"></i>
+                    <i class="fa-solid fa-infinity"></i>
                     <div class="text">
-                        <h3>Lorem, ipsum dolor.</h3>
+                        <h3>DevOps Engineer</h3>
                         <p>
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure,
                             beatae.
                         </p>
                     </div>
                 </div>
+<!-- DevOps Instructor  -->
                 <div class="serv-box">
-                    <i class="fas fa-cog"></i>
+                    <i class="fa-solid fa-chalkboard-user"></i>
                     <div class="text">
-                        <h3>Lorem, ipsum dolor.</h3>
+                        <h3>DevOps Instructor </h3>
                         <p>
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure,
                             beatae.
                         </p>
                     </div>
                 </div>
+<!-- Cloud Engineer  -->
                 <div class="serv-box">
-                    <i class="fas fa-ruler"></i>
+                    <i class="fa-brands fa-aws fff"></i>
                     <div class="text">
-                        <h3>Lorem, ipsum dolor.</h3>
+                        <h3>Cloud Engineer</h3>
                         <p>
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure,
                             beatae.
                         </p>
                     </div>
                 </div>
+<!-- Full-Stack Web Developer  -->
                 <div class="serv-box">
-                    <i class="fas fa-key"></i>
+                    <i class="fa-solid fa-laptop-code"></i>
                     <div class="text">
-                        <h3>Lorem, ipsum dolor.</h3>
+                        <h3>Full-Stack Web Developer</h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure,
-                            beatae.
+                            We offer support to our clients on existing websites, in addition to advising & executing full rebuild projects of their entire online presence.
                         </p>
                     </div>
                 </div>
