about & footer sections added

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <ul class="nlist" id="nList">
                     <li><a class="nLink" href="#" class="a ctive">Home</a></li>
                     <li><a class="nLink" href="#Services">Services</a></li>
-                    <li><a class="nLink" href="#">Portfolio</a></li>
+                    <li><a class="nLink" href="#footer">Experience</a></li>
                     <li><a class="nLink" href="#iam">About</a></li>
-                    <li><a class="nLink" href="#">Contact</a></li>
+                    <li><a class="nLink" href="#Contact">Contact</a></li>
                 </ul>
                 <div class="form">
                     <i class="fas fa-search"></i>
@@ -69,19 +69,19 @@
                     </h2>
                     <p>
                         <!-- twitter -->
-                        <a href="https://twitter.com/Osama__Yusuf" target="_planck">
+                        <a href="https://twitter.com/Osama__Yusuf" target="_blank">
                             <i class="fa-brands fa-twitter"></i>
                         </a>
                         <!-- linkedin -->
-                        <a href="https://www.linkedin.com/in/osama--youssef/" target="_planck">
+                        <a href="https://www.linkedin.com/in/osama--youssef/" target="_blank">
                             <i class="fa-brands fa-linkedin-in"></i>
                         </a>
                         <!-- github -->
-                        <a href="https://github.com/Osama-Yusuf" target="_planck">
+                        <a href="https://github.com/Osama-Yusuf" target="_blank">
                             <i class="fa-brands fa-github"></i>
                         </a>
                         <!-- stack-overflow -->
-                        <a href="https://stackoverflow.com/users/14504222/osama-mohamed?tab=profile" target="_planck">
+                        <a href="https://stackoverflow.com/users/14504222/osama-mohamed?tab=profile" target="_blank">
                             <i class="fa-brands fa-stack-overflow"></i>
                         </a>
 
@@ -142,7 +142,7 @@
                 <div class="skill-cont">
 
                     <div class="skillsCont" id="skillsCont">
-     <!-- less-group-->
+<!-- less-group-->
                         <div  id="lessGroup">
     <!-- 1 -->
                             <div class="prog-holder">
@@ -188,7 +188,7 @@
                             </div>
                         </div>
     
-    <!-- more-group-->
+<!-- more-group-->
                         <div class="off" id="moreGroup">
      <!-- 7-->
                             <div class="prog-holder  ">
@@ -294,6 +294,88 @@
         </div>
     </section>
 <!-- End Services -->
+
+
+
+<!-- Start Contact us -->
+<section class="Contact">
+    <!-- head Contact us -->
+    <div class="title" id="Contact">
+        <h2>Contact us</h2>
+        <p>	&#60; Keep in touch	&#62;</p>
+    </div>
+    <div class="container">
+
+        <form action="">
+            <input class="main-input" type="text" name="name" placeholder="Your Name">
+            <input class="main-input" type="email" name="mail" placeholder="Your Email">
+            <textarea class="main-input" name="message" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message">
+        </form>
+        <div class="info">
+            <h4>Get In Touch</h4>
+            <span class="phone">011 24 88 6666</span>
+            <span class="phone">0111 22 11 515</span>
+            <h4>Where I'm</h4>
+            <address>
+                El-Mohandessin St, <br>
+                Giza, <br>
+                EGYPT
+            </address>
+        </div>
+    </div>
+</section>
+<!-- End Contact us -->
+
+
+
+<!-- Start Footer -->
+<section class="Footer" id="footer">
+    <div class="container">
+            <img src="image/Osama-name-Logo.png" alt="logo">
+            <p>Find Me In Social</p>
+            <div class="social">
+                        <!-- whatsapp -->
+                        <a href="https://api.whatsapp.com/send?phone=201124886666" title="01124886666" target="_blank">
+                            <i class="fa-brands fa-whatsapp"></i>
+                        </a>
+                        <!-- twitter -->
+                        <a href="https://twitter.com/Osama__Yusuf" target="_blank">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <!-- linkedin -->
+                        <a href="https://www.linkedin.com/in/osama--youssef/" target="_blank">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                        <!-- github -->
+                        <a href="https://github.com/Osama-Yusuf" target="_blank">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                        <!-- stack-overflow -->
+                        <a href="https://stackoverflow.com/users/14504222/osama-mohamed?tab=profile" target="_blank">
+                            <i class="fa-brands fa-stack-overflow"></i>
+                        </a>
+                        <!-- stack-tree -->
+                        <a href="https://linktr.ee/Osama_Youssef" target="_blank">
+                            <i class="fa-solid fa-tree"></i>
+                        </a>
+            </div>
+            <p class="copyright">&copy; 2022 <span>OSAMA</span> All rights reserved. | <a href="https://amrabdelwahab.netlify.app/" target="_blank">Amr abdelWahab</a></p>
+    </div>
+</section>
+<!-- End Footer -->
+
+
+
+
+
+
+
+
+
+
+
+
 
     <script src="js/main.js"></script>
 </body>
