--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <input class="main-input" type="text" name="name" placeholder="Your Name">
             <input class="main-input" type="email" name="mail" placeholder="Your Email">
             <textarea class="main-input" name="message" placeholder="Your Message"></textarea>
-            <input type="submit" value="Send Message">
+            <input type="submit" onclick="mailto" value="Send Message">
         </form>
         <div class="info">
             <h4>Get In Touch</h4>
@@ -374,8 +374,9 @@
 
 
 
-
-
+<a href="#" class="goUp ">
+    <i class="fa-solid fa-hand-point-up "></i>
+</a>
 
     <script src="js/main.js"></script>
 </body>
