fix send msg. BTN

--- a/index.html
+++ b/index.html
@@ -310,7 +310,8 @@
             <input class="main-input" type="text" name="name" placeholder="Your Name">
             <input class="main-input" type="email" name="mail" placeholder="Your Email">
             <textarea class="main-input" name="message" placeholder="Your Message"></textarea>
-            <input type="submit" onclick="mailto" value="Send Message">
+            <a class="mailMe" href="mailto:Osama9mohamed5@gmail.com">Send Message</a>
+            <!-- <input type="submit" href="mailto" value="Send Message"> -->
         </form>
         <div class="info">
             <h4>Get In Touch</h4>
