--- a/index.html
+++ b/index.html
@@ -60,12 +60,15 @@
                     <h2>
                         Osama Youssef <br />
                         <span>
-                            DevOps Engineer 
-                            | AWS | Docker | 
-                            <a href="#iam">...</a>
+                          AWS Certified DevOps Engineer
+                          <a href="#iam">...</a>
                         </span>
                     </h2>
                     <p>
+                        <!-- whatsapp -->
+                        <a href="https://api.whatsapp.com/send?phone=201124886666" title="01124886666" target="_blank">
+                          <i class="fa-brands fa-whatsapp"></i>
+                        </a>
                         <!-- twitter -->
                         <a href="https://twitter.com/Osama__Yusuf" target="_blank">
                             <i class="fa-brands fa-twitter"></i>
@@ -81,6 +84,10 @@
                         <!-- stack-overflow -->
                         <a href="https://stackoverflow.com/users/14504222/osama-mohamed?tab=profile" target="_blank">
                             <i class="fa-brands fa-stack-overflow"></i>
+                        </a>
+                        <!-- stack-tree -->
+                        <a href="https://linktr.ee/Osama_Youssef" target="_blank">
+                          <i class="fa-solid fa-tree"></i>
                         </a>
 
                         <!-- <a href="#">...</a> -->
@@ -251,8 +258,8 @@
                     <div class="text">
                         <h3>DevOps Engineer</h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure,
-                            beatae.
+                          - Build pipelines and write scripts in Bash & Python. significantly speed up the process of product deployment,
+                          increasing the operation speed of an organization's IT infrastructure.
                         </p>
                     </div>
                 </div>
@@ -262,8 +269,7 @@
                     <div class="text">
                         <h3>DevOps Instructor </h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure,
-                            beatae.
+                          - Teaching DevOps with a hands on labs and projects on tools and concepts.
                         </p>
                     </div>
                 </div>
@@ -273,8 +279,10 @@
                     <div class="text">
                         <h3>Cloud Engineer</h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure,
-                            beatae.
+                          - Assisting organizations migrate their computer systems to the cloud,
+                          Configuring cloud infrastructure components like networking and security services,
+                          Creating the applications and databases that perform on the cloud,
+                          Monitoring cloud management and data storage services.
                         </p>
                     </div>
                 </div>
@@ -284,7 +292,7 @@
                     <div class="text">
                         <h3>Full-Stack Web Developer</h3>
                         <p>
-                            We offer support to our clients on existing websites, in addition to advising & executing full rebuild projects of their entire online presence.
+                            - We offer support to our clients on existing websites, in addition to advising & executing full rebuild projects of their entire online presence.
                         </p>
                     </div>
                 </div>
@@ -339,7 +347,7 @@
 
 
 <!-- <div class="popUpContainer "> -->
-  <div class="popUpOverlay " id="popUpOverlay">
+  <div class="popUpOverlay  " id="popUpOverlay">
     <span class="popUpClose" id="popUpClose">X</span>
     <p class="popUpMsmSent" id="popUpMsmSent"></p>
     <p class="popUpMsmSent" id="">Your Message has been successfully sent to OSAMA's mail.</p>
@@ -380,7 +388,7 @@
                             <i class="fa-solid fa-tree"></i>
                         </a>
             </div>
-            <p class="copyright">&copy; 2022 <span>OSAMA</span> All rights reserved. | <a href="https://amrabdelwahab.netlify.app/" target="_blank">Amr abdelWahab</a></p>
+            <p class="copyright">&copy; 2022 <span>OSAMA</span> All rights reserved. | <a href="https://www.amrabdelwahab.com/" target="_blank">Amr abdelWahab</a></p>
     </div>
 </section>
 <!-- End Footer -->
