--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
 
 <!-- <div class="popUpContainer "> -->
-  <div class="popUpOverlay  " id="popUpOverlay">
+  <div class="popUpOverlay  op en" id="popUpOverlay">
     <span class="popUpClose" id="popUpClose">X</span>
     <p class="popUpMsmSent" id="popUpMsmSent"></p>
     <p class="popUpMsmSent" id="">Your Message has been successfully sent to OSAMA's mail.</p>
